# vax-floating

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: benchmarks.rs
src/: arithmetic.rs  error.rs  lib.rs  proptest.rs
src/doc/: DFloating_vax.doc  FFloating_vax.doc  GFloating_vax.doc  HFloating_vax.doc  encoded_reserved.doc  vax_ieee_754_diffs.doc
