[package]
name = "vax-floating"
version = "0.1.0"
authors = ["Thomas Mundar"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Mundar/vax-floating"
keywords = ["VAX", "floating", "point", "floating-point"]
categories = ["data-structures::floating-point"]
edition = "2021"
rust-version = "1.67"
description = "VAX floating-point types"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = { version = "2", optional = true }	# This is to match up with proptest
forward_ref = "1.0.0"
proptest = { version = "1.4.0", optional = true }
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
bitflags = "2"	# This is to match up with proptest
clap = { version = "4.4.11", features = ["derive"] }
criterion = "0.5.1"
proptest = "1.4.0"
rand = "0.8.5"

[[bench]]
name = "benchmarks"
harness = false

[features]
proptest=["bitflags", "dep:proptest", "rand"]
